--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,8 +21,8 @@
     <servlet-name>Jersey REST Service</servlet-name>
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>com.lives.api</param-value>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>com.lives.config.APIApplication</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
@@ -30,5 +30,5 @@
     <servlet-name>Jersey REST Service</servlet-name>
     <url-pattern>/rest/*</url-pattern>
   </servlet-mapping>
-  
+ 
 </web-app>
